--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+typings/
 orleans.codegen.cs
 
 # RIA/Silverlight projects
@@ -234,3 +235,6 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+
+.env
